# ai-mechanistic-interpretability

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: causal_tracing_gpt2.yaml  causal_tracing_qwen3.yaml  logit_lens_gpt2.yaml  logit_lens_qwen3.yaml
data/: facts.yaml
docs/: methodology.md  results.md
experiments/: __init__.py  causal_tracing.py  logit_lens.py
interp/: __init__.py  config.py  lenses.py  metrics.py  patching.py  prompts.py  registry.py  run.py  viz.py
interp/models/: __init__.py  base.py  layouts.py  nnsight_adapter.py  transformer_lens_adapter.py
notebooks/: 01_walkthrough.py
tests/: test_adapter_consistency.py  test_experiments.py  test_metrics.py  test_patching_invariants.py  test_prompts.py  test_registry.py
